--- a/backend/.env
+++ b/backend/.env
@@ -4,10 +4,10 @@ FLASK_ENV=development
 FLASK_DEBUG=0
 FRONTEND_URL=http://localhost:5173
 
-# Gmail SMTP (verification emails) — replace with your Gmail address
-MAIL_SERVER=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=your_email@gmail.com
-MAIL_PASSWORD=cklxjxilipvpswwk
-MAIL_USE_TLS=true
-MAIL_FROM=DZ Clothes <your_email@gmail.com>
+# Mailjet API (verification emails)
+MAILJET_API_KEY=d6add4869a76c58daf0be4e6aea63bae
+MAILJET_SECRET_KEY=454453274a5186193872f1a4041ea492
+MAIL_FROM=noreply@dzclothes.dz
+
+# Telegram bot
+TELEGRAM_BOT_TOKEN=8100805252:AAG6_VkrAlZGPdLG31v4g50C3Aps9LS8OLA
