--- a/backend/.env.example
+++ b/backend/.env.example
@@ -22,4 +22,4 @@ GOOGLE_CLIENT_ID=814124596804-o07r8uokfces627sar5l0gk1ihacp1u5.apps.googleuserco
 
 # App
 FLASK_ENV=development
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://dzclothes.netlify.app
