--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ DATABASE_URL=postgres://avnadmin:AVNS_5ixnsNl6FBOA-u2viVY@pg-18ec6460-nightxcros
 JWT_SECRET_KEY=dev-secret-dz-clothes-change-in-production
 FLASK_ENV=development
 FLASK_DEBUG=0
-FRONTEND_URL=https://dzclothes.netlify.app
+FRONTEND_URL=https://dz-clothes00.vercel.app/
 
 # Mailjet API (verification emails)
 MAILJET_API_KEY=d6add4869a76c58daf0be4e6aea63bae
